# avogadro

./: .gitignore  .gitmodules  .removeVLA.patch.swp  .travis.yml  AUTHORS  AvoCPack.cmake  AvogadroCore.pc.in  AvogadroWidget.pc.cmake  CMakeLists.txt  CMakeLists.txt~  CTestConfig.cmake  ChangeLog  Doxyfile  Doxyfileext  INSTALL  PythonDeps.cmake  QPeriodicTable.pc.in  QPlotWidget.pc.in  README  README.md  TEST  authors.txt  authors.xml  autogen.sh  avogadro.nsi  avogadro.pc.in  avogadro.prf.in  avopkg.in  configure.ac  gpltemplate  groups  project.config  qperiodictable.prf.in  qplotwidget.prf.in  removeVLA.patch  removeVLA2.diff
0.1.0/: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfileext  authors.xml
0.1.0/avogadro/: untitled01.gpr
0.1.0/avogadro/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  application.cpp  avogadro.qrc  config.h.in  editcommands.cpp  elementcombobox.h  extension.h  flattabwidget.cpp  flattabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
0.1.0/cmake/modules/: FindAvogadro.cmake  FindOpenBabel2.cmake
0.1.0/libavogadro/: CMakeLists.txt
0.1.0/libavogadro/src/: CMakeLists.txt  camera.cpp  camera.h  color.cpp  engine.cpp  engine.h  global.h  glwidget.cpp  glwidget.h  moleculetreeview.cpp  moleculetreeview.h  painter.cpp  painter.h  primitive.cpp  primitive.h  tool.cpp  tool.h  toolgroup.cpp  undosequence.h
avogadro/: CMakeLists.txt  ChangeLog  Doxyfile  README  avogadro.nsi
avogadro/gl2ps/: TODO  gl2ps.c  gl2ps.h  gl2psTest.c  gl2psTestSimple.c
avogadro/i18n/: CMakeLists.txt  avogadro_de.ts  avogadro_fr.ts
avogadro/include/avogadro/: extension.h
avogadro/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  action.cpp  action.h  addenginedialog.cpp  addenginedialog.h  addenginedialog.ui  application.cpp  application.h  avogadro.desktop  avogadro.pro  avogadro.qrc  avogadro.ui  avogadroapp.cpp  avogadroapp.h  breakpaddialog.cpp  breakpaddialog.h  config.h.in  detachedview.cpp  detachedview.h  editcommands.cpp  editcommands.h  elementcombobox.cpp  elementcombobox.cpp.disabled  elementcombobox.h  enginecolorswidget.cpp  enginecolorswidget.h  enginecolorswidget.ui  engineconfigurationwidget.ui  engineitemdelegate.cpp  engineitemdelegate.h  engineitemmodel.cpp  engineitemmodel.h  enginelistview.cpp  enginelistview.h  engineprimitiveswidget.cpp  engineprimitiveswidget.h  engineprimitiveswidget.ui  enginesetupwidget.cpp  (+70 more)
avogadro/src/extensions/: CMakeLists.txt  conformersearchdialog.cpp  conformersearchdialog.h  constraintsdialog.cpp  constraintsdialog.h  constraintsdialog.ui  constraintsmodel.cpp  constraintsmodel.h  dockingextension.cpp  dockingextension.h  forcefielddialog.cpp  forcefielddialog.h  forcefielddialog.ui  forcefieldextension.cpp  forcefieldextension.h  gamess.cpp  gamess.h  gamessefpmatchdialog.cpp  gamessefpmatchdialog.h  gamessefpmatchdialog.ui  gamessextension.cpp  gamessextension.h  gamessinputdata.cpp  gamessinputdata.h  gamessinputdialog.cpp  gamessinputdialog.h  gamessinputdialog.ui  ghemical.cpp  ghemical.h  ghemicalextension.cpp  ghemicalextension.h  h2methylextension.cpp  h2methylextension.h  hydrogens.cpp  hydrogens.h  hydrogensextension.cpp  hydrogensextension.h  liganddialog.h  liganddialog.ui  pocketdialog.cpp  (+15 more)
avogadro/src/mac/: AvogadroDocument.icns  CompleteBundle.cmake.in  CreateBundle.sh.in  MacOSXBundleInfo.plist.in  avogadro.icns  lang.sh  locversion.plist.in
avogadro/src/plugins/: CMakeLists.txt  draw.cpp  draw.h  gamess.cpp  gamess.h  gamessinputbuilder.cpp  gamessinputbuilder.h  gamessinputbuilder.ui  gamessinputdata.cpp  gamessinputdata.h  gamessinputdialog.cpp  gamessinputdialog.h  gamessinputdialog.ui  ghemical.cpp  ghemical.h  hydrogens.cpp  hydrogens.h  navigate.cpp  navigate.h  selectrotate.cpp  selectrotate.h  ui_gamessinputdialog.h
avogadro/src/projectdelegates/: atomdelegate.cpp  atomdelegate.h  bonddelegate.cpp  bonddelegate.h  labeldelegate.cpp  labeldelegate.h  moleculedelegate.cpp  moleculedelegate.h  residuedelegate.cpp  residuedelegate.h  selectiondelegate.cpp  selectiondelegate.h
avogadro/src/projectplugins/: atomitems.cpp  atomitems.h  bonditems.cpp  bonditems.h  labelitems.cpp  labelitems.h  moleculeitems.cpp  moleculeitems.h
avogadro/src/tools/: CMakeLists.txt  SelectRotate.cpp  SelectRotate.pro  draw.cpp  draw.h  selectrotate.cpp  selectrotate.h  tools.pro
doc/: CMakeLists.txt  Doxyfile.in  avogadro.1  avopkg.1  eigen.tags  generate_handbook.sh  handbook.html  index.docbook  mainpage.dox  openbabel.tags
libavogadro/: CMakeLists.txt  FindOpenBabel.cmake  config-libavogadro.h.in  config.h.in  global.h.in
libavogadro/examples/c++/: CMakeLists.txt  templateextension.cpp  templateextension.h  templateextension.mf  templateextension.pro
libavogadro/i18n/: libavogadro_de.ts  libavogadro_fr.ts
libavogadro/include/avogadro/: atom.h  (+50 more)
libavogadro/qtiocompressor/: qtiocompressor.cpp
libavogadro/src/: CMakeLists.txt  animation.cpp  animation.h  atom.cpp  atom.h  avogadroformat.cpp  avospglib.cpp  avospglib.h  bond.cpp  bond.h  boost.h  boxcontrol.cpp  boxcontrol.h  camera.cpp  camera.h  cartoonmeshgenerator.cpp  cartoonmeshgenerator.h  clippedcylinder_p.cpp  clippedcylinder_p.h  color.cpp  color.h  color3f.h  colorbutton.cpp  colorbutton.h  colorplugin.cpp  colorplugin.h  config.h.in  cube.cpp  cube.h  cylinder.cpp  cylinder.h  cylinder_p.cpp  cylinder_p.h  dockextension.cpp  dockextension.h  dockwidget.cpp  dockwidget.h  elementbox.cpp  elementcolor.cpp  elementcolor.h  (+177 more)
libavogadro/tests/: CMakeLists.txt  cartoonmeshbench.cpp  drawcommandtest.cpp  hydrogenscommandtest.cpp  moleculebench.cpp  moleculefiletest.cpp  moleculetest.cpp  neighborlisttest.cpp  primitivemodeltest.cpp
periodictable/src/: CMakeLists.txt  config.h.in  elementitem_p.cpp  elementtranslator.cpp  elementtranslator.h  global.cpp  global.h  periodictableexport.h  periodictablescene_p.cpp  periodictableview.h  qperiodictable.cpp  qperiodictable.h
plotwidget/src/: CMakeLists.txt  global.h  plotaxis.cpp  plotaxis.h  plotobject.h  plotpoint.cpp  plotpoint.h  plotwidget.cpp  plotwidget.h
(+3036 files in other folders)
